<resources>
    <string name="app_name">Ucab Market</string>
    <string name="agregar_articulo">Agregar Articulo</string>
    <string name="Second_Activity">Articulos</string>
    <string name="arroz">arroz</string>
    <string name="pasta">pasta</string>
    <string name="leche">leche</string>
    <string name="jugo">jugo</string>
    <string name="agua">agua</string>
    <string name="caraota">caraota</string>
    <string name="ajo">ajo</string>
    <string name="ace">ace</string>
    <string name="pollo">pollo</string>
    <string name="carne">carne</string>
    <string name="pescado">pescado</string>
    <string name="sal">sal</string>
    <string name="azucar">azucar</string>
    <string name="pan">pan</string>
    <string name="jamon">jamon</string>
    <string name="queso">queso</string>
    <string name="lenteja">lenteja</string>
    <string name="mostaza">mostaza</string>
    <string name="vino">vino</string>
    <string name="harina">harina</string>
    <string name="compra_1">Agregue articulo...</string>
    <string name="compra_2">Agregue articulo...</string>
    <string name="compra_3">Agregue articulo...</string>
    <string name="compra_4">Agregue articulo...</string>
    <string name="compra_5">Agregue articulo...</string>
    <string name="compra_6">Agregue articulo...</string>
    <string name="compra_7">Agregue articulo...</string>
    <string name="compra_8">Agregue articulo...</string>
    <string name="compra_9">Agregue articulo...</string>
    <string name="compra_10">Agregue articulo...</string>
    <string name="compra_11">Agregue articulo...</string>
    <string name="compra_12">Agregue articulo...</string>
    <string name="compra_13">Agregue articulo...</string>
    <string name="compra_14">Agregue articulo...</string>
    <string name="compra_15">Agregue articulo...</string>
    <string name="compra_16">Agregue articulo...</string>
    <string name="compra_17">Agregue articulo...</string>
    <string name="compra_18">Agregue articulo...</string>
    <string name="compra_19">Agregue articulo...</string>
    <string name="compra_20">Agregue articulo...</string>
    <string name="comprar_arroz">Comprar</string>
    <string name="comprar_pasta">Comprar</string>
    <string name="comprar_leche">Comprar</string>
    <string name="comprar_jugo">Comprar</string>
    <string name="comprar_agua">Comprar</string>
    <string name="comprar_caraota">Comprar</string>
    <string name="comprar_ajo">Comprar</string>
    <string name="comprar_harina">Comprar</string>
    <string name="comprar_pollo">Comprar</string>
    <string name="comprar_ace">Comprar</string>
    <string name="comprar_pan">Comprar</string>
    <string name="comprar_sal">comprar</string>
    <string name="comprar_azucar">Comprar</string>
    <string name="comprar_pescado">Comprar</string>
    <string name="comprar_jamon">Comprar</string>
    <string name="comprar_lenteja">Comprar</string>
    <string name="comprar_mostaza">Comprar</string>
    <string name="comprar_carne">Comprar</string>
    <string name="comprar_queso">Comprar</string>
    <string name="comprar_vino">Comprar</string>


</resources>
