<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <Button
        android:id="@+id/button_arroz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/arroz"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_pasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_arroz"
        android:text="@string/pasta"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_leche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_pasta"
        android:text="@string/leche"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_jugo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_leche"
        android:text="@string/jugo"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_agua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_jugo"
        android:text="@string/agua"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_caraota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_jugo"
        android:layout_toEndOf="@+id/button_mostaza"
        android:text="@string/caraota"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_ajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_caraota"
        android:layout_below="@+id/button_arroz"
        android:text="@string/ajo"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_ace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_pollo"
        android:layout_below="@+id/button_leche"
        android:text="@string/ace"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_pollo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_carne"
        android:layout_below="@+id/button_pasta"
        android:text="@string/pollo"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_carne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_harina"
        android:layout_below="@+id/button_arroz"
        android:text="@string/carne"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_pescado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button_arroz"
        android:text="@string/pescado"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_sal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_arroz"
        android:layout_toEndOf="@+id/button_arroz"
        android:text="@string/sal"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_azucar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_pescado"
        android:layout_below="@+id/button_pasta"
        android:text="@string/azucar"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_pan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_pescado"
        android:layout_below="@+id/button_leche"
        android:text="@string/pan"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_jamon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_jugo"
        android:layout_toEndOf="@+id/button_arroz"
        android:text="@string/jamon"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_queso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_ajo"
        android:layout_below="@+id/button_leche"
        android:text="@string/queso"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_lenteja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_ajo"
        android:layout_below="@+id/button_pasta"
        android:text="@string/lenteja"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_mostaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_ace"
        android:layout_below="@+id/button_jugo"
        android:text="@string/mostaza"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_mayonesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button_ace"
        android:text="@string/vino"
        android:onClick="returnReply"/>

    <Button
        android:id="@+id/button_harina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button_pescado"
        android:text="@string/harina"
        android:onClick="returnReply"/>

</RelativeLayout>